--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.72.4",
-    "expo-image": "~1.3.3"
+    "expo-image": "~1.3.3",
+    "react-native-gesture-handler": "~2.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
