--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@react-native-community/datetimepicker": "7.2.0",
     "expo": "~49.0.10",
-    "expo-image": "~1.3.3",
+    "expo-image": "~1.3.4",
     "expo-status-bar": "~1.6.0",
     "formik": "^2.4.5",
     "nativewind": "^2.0.11",
@@ -19,7 +19,8 @@
     "react-native": "0.72.5",
     "react-native-gesture-handler": "~2.12.0",
     "yup": "^1.2.0",
-    "expo-image-picker": "~14.3.2"
+    "expo-image-picker": "~14.3.2",
+    "react-native-maps": "1.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
